--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b3a66">
-  <link rel="icon" href="assets/images/colored-logo.jpg">
+  <link rel="icon" href="assets/images/colored-logo.png">
   <link rel="apple-touch-icon" href="assets/images/colored-logo.jpg">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
