--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b3a66">
   <link rel="icon" href="assets/images/colored-logo.png">
-  <link rel="apple-touch-icon" href="assets/images/colored-logo.jpg">
+  <link rel="apple-touch-icon" href="assets/images/colored-logo.png">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
