--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="assets/images/colored-logo.png" alt="APEX Legal Support" class="me-2" />
+        <img src="assets/images/colored-logo.png" class="me-2" />
         <span>APEX Legal Support</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
