--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b3a66">
-  <link rel="icon" href="assets/images/colored-logo.png">
-  <link rel="apple-touch-icon" href="assets/images/colored-logo.png">
+  <link rel="icon" href="colored-logo.png">
+  <link rel="apple-touch-icon" href="colored-logo.png">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
@@ -279,7 +279,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="assets/images/colored-logo.png" alt="APEX Legal Support" class="me-2" />
+        <img src="colored-logo.png" alt="APEX Legal Support" class="me-2" />
         <span>APEX Legal Support</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
